--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js'></script>
-<script src='https://codepen.io/ste-vg/pen/zBVaZw.js'></script><script  src="./script.js"></script>
+<script src='zBVaZw.js'></script><script  src="./script.js"></script>
 
 </body>
 </html>
