--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" id="fav" type="image/x-icon">
 </head>
-<body>
+<body style="zoom: 1;">
 <!-- partial:index.partial.html -->
 <div class="background">
 <div class="container">	
