--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Fergana weather</title>
+  <title>Weather</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" id="fav" type="image/x-icon">
 </head>
